test_regress/t/t_enum_overlap_bad.out
%Error: t/t_enum_overlap_bad.v:13:5: Overlapping enumeration value: 'e1b'
                                   : ... note: In instance 't'
   13 |     e1b = 1
      |     ^~~
        t/t_enum_overlap_bad.v:11:5: ... Location of original declaration
   11 |     e1,
      |     ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
